# deployable_scraper

./: .gitignore  .pre-commit-config.yaml  README.md  build_sqlite3_rsync.sh  compose.yml  environment.yml  pyproject.toml
src/: db_tools.py  logging_config.py  scraper_schedule.py
src/main_scripts/: run_scraper_schedule.py
src/sql_scripts/create/: create_availabilityAggregated_table.sql  create_availabilityLog_table.sql  create_connectorGroups_table.sql  create_evseIds_table.sql  create_locations_table.sql  create_priceGroups_table.sql  create_priceTimeSlots_table.sql  create_pricesLog_table.sql
src/sql_scripts/select/: select_all_locationIds.sql  select_connectorGroup_by_plugType_speed.sql  select_priceGroupId_by_locationId_evseidsHash.sql
tests/: helper_class.py  test_create_db.py  test_foreign_keys_on_availabilityAggregated.py  test_foreign_keys_on_availabilityLog.py  test_foreign_keys_on_connectorGroup.py  test_insert_availabilityLog.py  test_insert_connectorGroups.py  test_insert_locations.py  test_insert_pricesLog.py  test_run_scraper.py  test_select_locationId_by_speed.py
tests/functionality_testing/: helper_class.py  test_db_functionality.py  test_functionality.py  test_scraper_functionality.py  test_simulate_scraper_functionality.py
tests/production_testing/: test_scraper_schedule_with_real_scrapes.py
