[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deployable_scraper"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "APScheduler",
    "scraping-charger-data @ git+https://github.com/NikolajMLund/scraping_charger_data.git"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/NikolajMLund/deployable_scraper"

[tool.setuptools.packages.find]
where = ["src"]